# agent.gift

./: .env.example  .gitignore  LICENSE  README.md
backend/: pyproject.toml
backend/app/: __init__.py  agents.py  config.py  main.py  schemas.py
backend/app/services/: agent_state.py  crew_runner.py  curation.py  investigation_steps.py  json_utils.py  search_helpers.py  streaming.py  url_filters.py
backend/tests/: test_health.py
frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: agent-roster.tsx  loading-skeletons.tsx  log-panel.tsx  result-cards.tsx
frontend/lib/: streamInvestigate.ts  types.ts
