[project]
name = "agent-gift-backend"
version = "0.1.0"
description = "agent.gift backend"
requires-python = ">=3.11"
dependencies = [
  "crewai>=0.130.0",
  "fastapi>=0.115.0",
  "langchain-openai>=0.3.0",
  "langchain-community>=0.3.0",
  "langchain-tavily>=0.2.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "sse-starlette>=2.1.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.3.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
